# Renderella

./: .gitignore  CMakeLists.txt  README.md
assets/: mattest.mtl
assets/patchy-meadow1-bl/: readme.txt
assets/shaders/: compose.frag  deferred.frag  fragment.frag  phong.frag  plain.frag  screen.frag  screen.vert  shadow.geom  shadow.vert  vertex.vert
assets/tree/: license.txt  tree.mtl
demo/sponza/: CMakeLists.txt  main.cpp
demo/terrain/: CMakeLists.txt  WorldGen.hpp  main.cpp
src/: Camera.cpp  Camera.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Framebuffer.cpp  Framebuffer.hpp  InstancedMesh.cpp  InstancedMesh.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ObjLoader.cpp  ObjLoader.hpp  PhongMat.cpp  PhongMat.hpp  Primitives.hpp  RenderQueue.cpp  RenderQueue.hpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  TextureData.cpp  TextureData.hpp  TextureLoader.cpp  TextureLoader.hpp  UniLocation.cpp  UniLocation.hpp  Vertex.hpp  WindowManager.cpp  WindowManager.hpp  main.cpp
